--- a/app/src/main/res/layout/applist.xml
+++ b/app/src/main/res/layout/applist.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-
+    android:layout_width="fill_parent"
     android:layout_height="45dp">
     <ImageView android:id="@+id/image"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="fill_parent"
         android:layout_gravity="left"
-        android:layout_weight="10" />
+        />
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:text="app"
         android:textSize="30dp"
-        android:layout_weight="80"
         android:layout_gravity="left"
         android:id="@+id/textView" />
-
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="end" >
     <ToggleButton
         android:layout_width="wrap_content"
-        android:layout_weight="10"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:background="@android:color/transparent"
         android:button="@drawable/toggle_btn"
         android:checked="false"
         android:text=""
-        android:textOff="关"
-        android:textOn="开"
+        android:textOff=""
+        android:textOn=""
         android:id="@+id/toggleButton" />
+        </LinearLayout>
 </LinearLayout>
